IATI Schema Changes -*-Outline-*-

* Next release

** Activities

- [*] correct content model for conditions/condition, which previously
  was hidden by misplaced xsd:annotation element (Redmine issue #72)

- in documentation, no longer specify default for optional
  iati-activities/@version attribute

- add optional transaction/description element

- make budget/@type, budget/period-start/@iso-date, and
  budget/period-end/@iso-date optional

- make planned-disbursement/period-start/@iso-date and
  planned-disbursement/period-end/@iso-date optional

- make participating-org/@type optional again

- make activity-status/@code optional again

- [*] remove location/description/@type

- make location/coordinates/@precision optional

- change all instances of xsd:date and xsd:dateTime to xsd:string, to
  allow other ISO 8601 values not supported by XML Schema default
  datatypes; affects iati-activities/@generated-datetime,
  iati-activity/@last-updated-datetime, activity-date/@iso-date,
  transaction/transaction-date/@iso-date,
  budget/period-start/@iso-date, budget/period-end/@iso-date,
  planned-disbursement/period-start/@iso-date,
  planned-disbursement/period-end/@iso-date,
  planned-disbursement/@updated


** Organisations

- made recipient-org-budget/recipient-org/@ref optional again

- added top-level iati-organisations element, similar to
  iati-activies, to allow multiple organisation records in a single
  file

- change all instances of xsd:date and xsd:dateTime to xsd:string, to
  allow other ISO 8601 values not supported by XML Schema default
  datatypes; affects iati-organisation/@last-updated-datetime,
  total-budget/period-start/@iso-date,
  total-budget/period-end/@iso-date,
  recipient-org-budget/period-start/@iso-date,
  recipient-org-budget/period-end/@iso-date,
  recipient-country-budget/period-start/@iso-date,
  recipient-country-budget/period-end/@iso-date


** Registry Record

- change all instances of xsd:date and xsd:dateTime to xsd:string, to