@@ -1,0 +1,8 @@
+<?xml version="1.0"?>
+
+<iati-organisation>
+  <iati-identifier>12345</iati-identifier>
+
+  <!-- test the reporting-org is allowed here -->
+  <reporting-org ref="xxx">xxx</reporting-org>
+</iati-organisation>
